--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,12 +7,22 @@ body { font: 13px Helvetica, Arial; }
 #messages li { padding: 5px 10px; }
 #messages li:nth-child(odd) { background: #eee; }
 
+#name,
+#n {
+	margin-top: 10px;
+}
+
+.members-box {
+	text-align: left;
+	padding-left: 10px;
+	margin-top: 10px;
+}
+
 .sidebar {
   text-align: center;
   position: absolute;
   right: 0px;
-  height: 500px;
+  height: 100%;
   width: 200px;
-  border: 10px solid black;
   background-color: orange;
 }
