--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,11 +1,54 @@
-* { margin: 0; padding: 0; box-sizing: border-box; }
-body { font: 13px Helvetica, Arial; }
-#text { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-#text input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-#text button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-#messages { list-style-type: none; margin: 0; padding: 0; }
-#messages li { padding: 5px 10px; }
-#messages li:nth-child(odd) { background: #eee; }
+* { 
+	margin: 0;
+	padding: 0; 
+	box-sizing: border-box; 
+}
+
+body { 
+	font: 13px 
+	Helvetica, Arial; 
+}
+
+#text { 
+	background: #000; 
+	padding: 3px; position: 
+	fixed; bottom: 0; 
+	width: 100%; 
+}
+
+#text input { 
+	border: 0; 
+	padding: 10px; 
+	width: 90%; 
+	margin-right: .5%; 
+}
+
+#text button { 
+	width: 9%; 
+	background: rgb(130, 224, 255); 
+	border: none; 
+	padding: 10px; 
+}
+
+#messages { 
+	list-style-type: none; 
+	margin: 0; 
+	padding: 0; 
+	top: 0;
+	bottom: 39px;
+	right: 200px;
+	left: 0;
+	overflow: auto;
+	position: absolute;
+}
+
+#messages li { 
+	padding: 5px 10px; 
+}
+
+#messages li:nth-child(odd) { 
+	background: #eee; 
+}
 
 #name,
 #n {
@@ -18,9 +61,32 @@ body { font: 13px Helvetica, Arial; }
 	margin-top: 10px;
 }
 
+.msgTime {
+	float: right;
+	margin-right: 0;
+}
+
+.about-text{
+	margin-top: 40%;
+}
+
+.about-button{
+	position: absolute;
+	bottom: 50px;
+}
+
+.about {
+  position: absolute;
+  text-align: center;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: orange;
+}
+
 .sidebar {
   text-align: center;
-  position: absolute;
+  position: fixed;
   right: 0px;
   height: 100%;
   width: 200px;
